tolk-tester/tests/invalid-declaration/err-1361.tolk
get fun onInternalMessage() {
    return 0;
}

/**
@compilation_should_fail
@stderr invalid declaration of a reserved function
 */
